# rust-embassy

./: .gitlab-ci.yml  CLAUDE.md  Cargo.toml  RESUME_CONTEXT.md  build.rs  cfg.yml  partitions.csv  readme.md  rust-toolchain.toml
.cargo/: config.toml
src/: app.rs  main.rs  mqtt.rs  network.rs
src/ota/: http_client.rs  http_client_test.rs  mod.rs  ota_client.rs  ota_client_test.rs  ota_writer.rs  protocol_test.rs
src/temperature/: mod.rs  temperature_client.rs  temperature_client_test.rs  temperature_driver.rs
tests/: hil_test.rs  integration_test.rs
tests/fixtures/: containers.rs  flash.rs  mod.rs  ota_server.rs
